[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/generators/classic/chunk/ChunkCollider.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[node name="ChunkCollider" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="__on_body_entered"]
[connection signal="body_exited" from="." to="." method="__on_body_exited"]
